--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/oval"
+        android:icon="@drawable/table"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/oval"
+        android:roundIcon="@drawable/table"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="false">
